# workshops

./: .gitignore  pyproject.toml
flatten_list/: deep_flatten.py  main.py  test_flatten_list.py  test_main.py
