[tool.poetry]
name = "workshops"
version = "0.1.0"
description = ""
authors = ["Piotr Sierkin <psierkin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipykernel = "^6.5.1"

[tool.poetry.dev-dependencies]
black = {version = "^21.11b1", allow-prereleases = true}
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
